Fix layout sides issues

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -59,8 +59,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_24dp"
-                        android:layout_marginLeft="@dimen/margin_16dp"
-                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_16dp"
                         android:textAllCaps="true"
                         android:textSize="@dimen/text_size_20sp"
@@ -72,8 +72,8 @@
                         android:id="@+id/tv_descr_full"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_16dp"
-                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_16dp"
                         android:textSize="@dimen/text_size_16sp"
                         android:textColor="@color/colorTvBlack"
                         tools:text="@tools:sample/lorem/random"/>
@@ -89,8 +89,8 @@
                         android:id="@+id/tv_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_16dp"
-                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_8dp"
                         android:paddingStart="4dp"
                         tools:text="ЦКПО им. Горького"
@@ -102,8 +102,8 @@
                         android:id="@+id/tv_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_16dp"
-                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_8dp"
                         android:paddingStart="@dimen/margin_4dp"
                         android:drawableStart="@drawable/ic_date"
@@ -115,8 +115,8 @@
                         android:id="@+id/tv_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_16dp"
-                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_marginStart="@dimen/margin_16dp"
+                        android:layout_marginEnd="@dimen/margin_16dp"
                         android:layout_marginBottom="@dimen/margin_16dp"
                         android:paddingStart="@dimen/margin_4dp"
                         android:drawableStart="@drawable/ic_ruble"
@@ -143,8 +143,8 @@
                         android:layout_gravity="center_horizontal|bottom"
                         android:layout_marginBottom="@dimen/margin_16dp"
                         android:background="@drawable/details_navigate_btn_rounded"
-                        android:paddingLeft="@dimen/margin_8dp"
-                        android:paddingRight="@dimen/margin_8dp"
+                        android:paddingStart="@dimen/margin_8dp"
+                        android:paddingEnd="@dimen/margin_8dp"
                         android:textColor="@color/colorAccent"/>
                 </FrameLayout>
             </LinearLayout>
