--- a/app/src/main/res/layout/toolbar_details.xml
+++ b/app/src/main/res/layout/toolbar_details.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/details_btn_back_width_48dp"
         android:layout_height="@dimen/margin_32dp"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginLeft="@dimen/margin_12dp"
+        android:layout_marginStart="@dimen/margin_12dp"
         android:background="@drawable/details_toolbar_btn_rounded"
         app:srcCompat="@drawable/ic_arrow_back"/>
 
