--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,11 @@
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
+    <style name="CitiesDialog" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
