--- a/app/src/main/res/layout/dialog_cities.xml
+++ b/app/src/main/res/layout/dialog_cities.xml
@@ -18,15 +18,33 @@
             android:paddingTop="@dimen/margin_12dp"
             android:paddingBottom="@dimen/margin_12dp"
             android:paddingStart="@dimen/margin_12dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/btn_back"
-                android:layout_width="@dimen/margin_20dp"
-                android:layout_height="@dimen/margin_20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/ic_arrow_back"/>
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_8dp"
+                android:layout_marginEnd="@dimen/margin_12dp"
+                android:hint="@string/city_search_hint"
+                android:includeFontPadding="false"
+                android:fontFamily="sans-serif-thin"
+                android:textColorHint="@color/colorTvBlack"
+                android:textColor="@android:color/black"
+                android:background="@null"/>
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height_1dp"
+            android:background="@color/colorDivider"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_cities"
@@ -45,7 +63,8 @@
         android:id="@+id/pb_cities"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#AA000000">
+        android:background="#AA000000"
+        tools:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
